force-app/main/default/objects/PDN_Opp_Project_History__c/PDN_Opp_Project_History__c.object-meta.xml
<CustomObject>
    <description>Related to Opportunities.  This will be used by PDN opps to track every iteration of the project opening and closing, along with some key information related to every iteration.</description>
    <label>PDN Opp Project History</label>
    <nameField>
        <label>PDN Opp Project History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PDN Opp Project History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>