force-app/main/default/objects/PDN_Opp_Project_History__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>Work Front will update this date when the project closes.</description>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>