force-app/main/default/objects/PDN_Opp_Project_History__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Project_History</relationshipName>
    <type>Lookup</type>
</CustomField>