force-app/main/default/objects/PDN_Opp_Project_History__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Updated upon creation with today&apos;s date</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>