force-app/main/default/objects/PDN_Opp_Project_History__c/fields/Turn_Around_Days__c.field-meta.xml
<CustomField>
    <fullName>Turn_Around_Days__c</fullName>
    <description>Calculate Turn Around Days</description>
    <formula>(CASE(MOD(  Start_Date__c - DATE(1985,6,24),7), 

  0 , CASE( MOD( Close_Date__c - Start_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Close_Date__c - Start_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Close_Date__c - Start_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Close_Date__c - Start_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Close_Date__c - Start_Date__c  ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Close_Date__c - Start_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Close_Date__c - Start_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Close_Date__c - Start_Date__c  )/7)*5)) - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Turn Around Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>